# learn-opengl

./: CMakeLists.txt  LICENSE.md  README.md  config.h.in  config_vars.h  draw_frame.h  error_handle.cpp  error_handle.h  include_glfw.h  initializators.cpp  initializators.h  main.cpp  setup_vao.cpp  setup_vao.h  shaders.h  shape_data.h
third-parties/glad/: CMakeLists.txt
third-parties/glad/glad/: glad.h
third-parties/glad/src/: glad.c
